<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <AutoCompleteTextView
        android:id="@+id/stockAutoComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/autoHint"
        android:completionThreshold="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="70dp"
        android:text="@string/clear"
        android:onClick="onClickClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockAutoComplete"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/quoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="55dp"
        android:text="@string/getQuote"
        android:onClick="onClickGetQuote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/stockAutoComplete"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favs"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearButton"
        app:layout_constraintVertical_bias="0.018" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/autoRefSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoRef"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toEndOf="@+id/favorite"
        app:layout_constraintTop_toBottomOf="@+id/quoteButton"
        app:layout_constraintVertical_bias="0.018" />

    <ImageButton
        android:id="@+id/refButton"
        android:layout_width="36dp"
        android:layout_height="33dp"
        android:layout_marginStart="9dp"
        android:onClick="onClickRefresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@+id/autoRefSwitch"
        app:layout_constraintTop_toBottomOf="@+id/quoteButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stockRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoRefSwitch"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/favoriteButton"
        android:layout_width="82dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:onClick="onClickAddFavorite"
        android:text="Add Favorite"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/stockRecyclerView"
        app:layout_constraintEnd_toStartOf="@+id/autoRefSwitch"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/favorite"
        app:layout_constraintTop_toBottomOf="@+id/clearButton"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>